feat: Добавил сбор статистики и т.д.
